--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -27,7 +27,7 @@
 [[[page:body()]]]
 </div>
 <div id="footer">
-&copy; Copyright 2010 Jabber.se
+&copy; Copyright 2004-2010 Jabber.se
 </div>
 </div>
 
