--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -10,7 +10,7 @@
 <script src='/jabber.se/jabber.se.js' type='text/javascript' charset='utf-8'></script>
 
 <link rel="stylesheet" href="/nitrogen/elements.css" type="text/css" media="screen" charset="utf-8">
-<link rel="stylesheet" href="/css/jabber.se.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="/jabber.se/jabber.se.css" type="text/css" media="screen" charset="utf-8">
 
 [[[page:head()]]]
 
