Change "*_left" to "*_right" to correspond to the actual position.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -26,7 +26,7 @@
     <div id="menu">
 	[[[web_index:menu()]]]
     </div>
-    <div id="menu_bar_left">
+    <div id="menu_bar_right">
     </div>
 </div>
 
