Port to nitrogen 2.0. Minor refactoring.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -6,6 +6,7 @@
 <script src='/nitrogen/jquery-ui.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/livevalidation.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/nitrogen.js' type='text/javascript' charset='utf-8'></script>
+<script src='/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
 <script src='/jabber.se/jabber.se.js' type='text/javascript' charset='utf-8'></script>
 
 <link rel="stylesheet" href="/nitrogen/elements.css" type="text/css" media="screen" charset="utf-8"/>
@@ -23,7 +24,7 @@
 <div id="title">[[[web_index:title()]]]</div>
 <div id="menu_bar">
     <div id="menu">
-	[[[web_index:menu()]]]
+	[[[menu:menu()]]]
     </div>
     <div id="menu_bar_right">
     </div>
@@ -45,12 +46,6 @@
     </div>
 </div>
 </div>
-
-<script type="text/javascript">
-
-set_fragment_path();
-</script>
-
 
 <script type="text/javascript">
 [[[script]]]
