Finished login panel.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -41,7 +41,7 @@
     </div>
     <div id="footer_right">
 	<div id="footer_right_container">
-	    [[[page:login()]]]
+	    [[[session:login_panel()]]]
 	</div>
     </div>
 </div>
