Added dynamic langage management prototype.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -21,7 +21,9 @@
 
 
 <div id="page">
-<div id="title">[[[web_index:title()]]]</div>
+    <div id="title">
+        <div id="title_container">[[[web_index:title()]]]</div>
+        <div id="language_bar">[[[web_index:language()]]]</div></div>
 <div id="menu_bar">
     <div id="menu">
 	[[[menu:menu()]]]
