Move admin panel to the right. New nitrogen version.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -34,10 +34,7 @@
                 [[[menu:menu()]]]
             </div>
 
-            <div class="wfid_menu_bar_center">
-                <!-- <div id="admin_panel">
-                    Create | Manage | Account
-                </div> -->
+            <div id="menu_bar_center">
             </div>
 
             <div id="menu_bar_right">
