First draft of account registration.
Upgraded nitrogen to new structure and new version.
Fixed nitrogen include paths.
Added 4 new types of elements.
Improved configuration system.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -5,8 +5,7 @@
 <!-- Nitrogen scripts -->
 <script src='/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/jquery-ui.js' type='text/javascript' charset='utf-8'></script>
-<!--<script src='/nitrogen/livevalidation.js' type='text/javascript' charset='utf-8'></script>-->
-<script src='/jabber.se/debug/livevalidation.js' type='text/javascript' charset='utf-8'></script>
+<script src='/nitrogen/livevalidation.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/nitrogen.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/bert.js' type='text/javascript' charset='utf-8'></script>
 <!-- Other scripts -->
