Refactored web_index initial content loading.
Instead of having an AJAX call requesting the content it's sent via the
first request. If there is an URL in the hash (#!url) the page is
reloaded after it's loaded. On newer browsers this should never happen
since pushState is used to avoid these kind of URLs.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id='head_element'>
-<title>[[[page:title()]]]</title>
+<title>[[[web_index:title()]]]</title>
 <!-- Nitrogen scripts -->
 <script src='/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
 <script src='/nitrogen/jquery-ui.js' type='text/javascript' charset='utf-8'></script>
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="/jabber.se/jquery-ui/jquery.ui.custom.css" type="text/css" media="screen" charset="utf-8"/>
 <link rel="stylesheet" href="/jabber.se/jabber.se.css" type="text/css" media="screen" charset="utf-8"/>
 
-[[[page:head()]]]
+[[[web_index:head()]]]
 
 </head>
 
@@ -43,7 +43,7 @@
 
         <div id="page_body" class="body">
             <div id="content_body">
-                [[[page:body()]]]
+                [[[web_index:body()]]]
             </div>
         </div>
 
@@ -58,7 +58,7 @@
         </div>
     </div>
 
-    [[[page:foot()]]]
+    [[[web_index:foot()]]]
 
     <script type="text/javascript">
         var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
@@ -68,7 +68,7 @@
         try{var pageTracker=_gat._getTracker("UA-8892321-1");pageTracker._trackPageview();}catch(err){}
     </script>
 
-        [[[page:dialogs()]]]
+        [[[web_index:dialogs()]]]
 
     <div id="overlay" style='display: none'>
     </div>
