--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -25,7 +25,7 @@
 
     <div id="page">
         <div id="title">
-            <div id="title_container">[[[web_index:title()]]]</div>
+            <div id="title_container">[[[web_index:page_title()]]]</div>
             <div id="language_bar">[[[web_index:language()]]]</div>
         </div>
         <div id="menu_bar">
