Various fixes including meta description and some conformance fixes.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -1,6 +1,8 @@
+<?xml version="1.0" encoding="utf-8" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id='head_element'>
+<meta name="Description" content="[[[web_index:description()]]]"/>
 <title>[[[web_index:title()]]]</title>
 <!-- Nitrogen scripts -->
 <script src='/nitrogen/jquery.js' type='text/javascript' charset='utf-8'></script>
@@ -13,7 +15,6 @@
 <script src='/jabber.se/jabber.se.js' type='text/javascript' charset='utf-8'></script>
 <script src='/jabber.se/post.js' type='text/javascript' charset='utf-8'></script>
 
-<link rel="stylesheet" href="/nitrogen/elements.css" type="text/css" media="screen" charset="utf-8"/>
 <link rel="stylesheet" href="/jabber.se/jquery-ui/jquery.ui.custom.css" type="text/css" media="screen" charset="utf-8"/>
 <link rel="stylesheet" href="/jabber.se/jabber.se.css" type="text/css" media="screen" charset="utf-8"/>
 
