Various compatibility fixes.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -55,6 +55,9 @@
             <div id="footer_right">
                 <div id="footer_right_container">
                 </div>
+		<div>
+		    <a href="http://github.com/jadahl/www.jabber.se/">Source</a>
+		</div>
             </div>
         </div>
     </div>
