Added cf_ prefix to some modules.

--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -31,14 +31,14 @@
         </div>
         <div id="menu_bar">
             <div id="menu">
-                [[[menu:menu()]]]
+                [[[cf_menu:menu()]]]
             </div>
 
             <div id="menu_bar_center">
             </div>
 
             <div id="menu_bar_right">
-                [[[session_view:login_panel()]]]
+                [[[cf_session_view:login_panel()]]]
             </div>
         </div>
 
