--- a/wwwroot/template.html
+++ b/wwwroot/template.html
@@ -50,7 +50,7 @@
 
         <div id="footer">
             <div id="footer_left">
-                &copy; Copyright 2004-2011 Jabber.se
+                &copy; Copyright 2004-2012 Jabber.se; content licensed under a CC BY-SA.
             </div>
             <div id="footer_right">
                 <div id="footer_right_container">
